--- a/content/post/2021-10-04-first-post/index.Rmd
+++ b/content/post/2021-10-04-first-post/index.Rmd
@@ -1,11 +1,24 @@
 ---
-title: First Post!
+title: a new beginning
 author: Nash Sauter
 date: '2021-10-04'
 slug: first-post
 categories: []
 tags: []
 ---
+> ***"man starts over again everyday, in spite of all he knows, against all he knows." ~emil cioran***
 
-# A Preliminary Test Post
-This is some text.
+As you may or may not know, I briefly ran a blog for a few months about a year ago.
+Although it was a lot of fun, I eventually ran out of ideas and motivation to keep writing new posts, especially considering the process that had to go formatting and publishing them.
+I have decided to restart my blog from scratch using a new workflow that allows for even more power to go into these posts.
+I am using a combination of R Studio and Hugo to create these pages in R Markdown files, making citations much easier and even allowing for R code blocks to be used.
+Hopefully this gives me some more room to write about whatever I feel like writing about.
+Take a look at this code:
+
+```{r}
+stat <- data.frame(c(1, 5, 100))
+summary(stat)
+```
+
+Here I just centered some numbers into a series and them found their summary statistics, but I'm sure you can imagine how much can be done with this type of thing.
+In any case, this is it for the first post (and hopefully not the last).
