--- a/content/post/2021-10-04-malaria/index.Rmd
+++ b/content/post/2021-10-04-malaria/index.Rmd
@@ -127,7 +127,7 @@ This isn't to say that the improvements in the last decade or so haven't been ex
 However, that doesn't mean we should be inactive when it comes to 750,000 preventable deaths.
 
 If you're reading this and it's within your means to spare just a few dollars (think of the kind of money that would otherwise go to a larger drink or an extra unused piece of clothing) - I would urge you to give just a bit of money to the [**Against Malaria Foundation**](https://www.againstmalaria.com/).
-They have been year after year by groups such as GiveWell and The Life You Can Save as a top charity due to their cost-effectiveness and ability to create long-term change.
+They have been rated as a top charity year after year by groups such as GiveWell and The Life You Can Save as a top charity due to their cost-effectiveness and ability to create long-term change.
 100% (that's right, 100%) of public donations go towards purchasing long-lasting insecticidal nets (LLINs) that protect against malaria, verifying that they reach their intended destinations in an equitable manner using household-level data, and making sure that they are kept in good condition.
 
 The Against Malaria Foundation has been shown by GiveWell to be extremely transparent and efficient too, so you know that your money isn't just getting stolen or funneled into some corrupt government.
