--- a/content/post/2022-03-28-2021albums/index.Rmd
+++ b/content/post/2022-03-28-2021albums/index.Rmd
@@ -32,14 +32,14 @@ Home Video, the third album by Lucy Dacus, is a bittersweet series of intricate 
 [**Album Link**](https://album.link/us/i/1586471742)
 
 ## 7. Mercurial World - Magdalena Bay (synthpop)
-L.A. based synthpop duo Magdalena Bay's debut album is a fantasic series of electronic music. The ethereal synth backings and the hypnotic voice of singer Mica Tenenbaum combine to create an album that'll make you lose track of time in an instant. The songs are consisent, but don't get boring. They embrace the new sounds of the internet era, but have hints of retro style mixed in to create a unique sound.
+L.A. based synthpop duo Magdalena Bay's debut album is a fantastic series of electronic music. The ethereal synth backings and the hypnotic voice of singer Mica Tenenbaum combine to create an album that'll make you lose track of time in an instant. The songs are consistent, but don't get boring. They embrace the new sounds of the internet era, but have hints of retro style mixed in to create a unique sound.
 
 [**Dawning of the Season**](https://youtu.be/OujNh58WEQ0)
 
 [**Album Link**](https://album.link/us/i/1570541671)
 
 ## 6. Sling - Clairo (singer-songwriter, chamber folk)
-Bedroom pop phenomenon Clairo's second album is a collection of singer-songwriter, soft-rock, and folk styles all delivered together in a neat package. Claire Cottrill's poetic writing and beautiful delivery contrast from the homemade pop feel of her earlier work, showing that she's truely talented at creating music regardless of what form it takes. One of the reccuring themes that Claire addresses are the problems of emotional exhaustion that comes with being a woman in the music industry. For example, Blouse deals with the objectification of women by men in the industry, and Amoeba deals with the stresses of constantly touring.
+Bedroom pop phenomenon Clairo's second album is a collection of singer-songwriter, soft-rock, and folk styles all delivered together in a neat package. Claire Cottrill's poetic writing and beautiful delivery contrast from the homemade pop feel of her earlier work, showing that she's truly talented at creating music regardless of what form it takes. One of the reccuring themes that Claire addresses are the problems of emotional exhaustion that comes with being a woman in the music industry. For example, Blouse deals with the objectification of women by men in the industry, and Amoeba deals with the stresses of constantly touring.
 
 [**Amoeba**](https://youtu.be/7WXXaIz3uds)
 
