--- a/content/post/2022-06-25-privacy.md
+++ b/content/post/2022-06-25-privacy.md
@@ -26,7 +26,7 @@ If you are talking about any remotely sensitive information that could later be 
 For these situations, you need an encrypted messenger.
 
 I would recommend using [Session](https://getsession.org/). 
-It is decentralized, and doesn't require any personal information to sign up meaning that it is completely anonymous unless you leak you ID code.
+It is decentralized, and doesn't require any personal information to sign up meaning that it is completely anonymous unless you leak your ID code.
 Another popular choice that many people have started to recommend is [Signal](https://signal.org/), which is miles better than texting, but is still less secure than Session because it is centralized and requires a phone number to sign up.
 
 # Search Engines
