--- a/content/post/2022-06-25-privacy.md
+++ b/content/post/2022-06-25-privacy.md
@@ -35,9 +35,12 @@ First, your history and cookies could be found if your computer gets seized by t
 This will be addressed through the browser section.
 Second, the company behind the search engine could track you and hand over your search logs to the government.
 Google is a nightmare in this regard, especially with their web of control through Google accounts, analytics, etc.
-I prefer [Qwant](https://www.qwant.com/), [Startpage](https://www.startpage.com/) or [DuckDuckGo](https://duckduckgo.com/).
+I prefer [Startpage](https://www.startpage.com/), [Qwant](https://www.qwant.com/), or [DuckDuckGo](https://duckduckgo.com/).
 Although DuckDuckGo is the most popular and most user-friendly privacy-centered search engine, there is a slight downside in that they are based in the United States which makes it more likely that they could be forced into handing over data to the government.
 This generally shouldn't be a problem since their logging practices seem to be much more secure than Google, but it is something to consider based on your circumstances.
+Startpage is based in Netherlands and Qwant is based in France.
+I would recommend Startpage because it doesn't save your searches into your browsing history by default.
+You will need to find out how to set one of them as your default browser based on whatever device and browser you're using, but if you're having any trouble feel free to let me know.
 
 # VPN
 VPNs are some of the most misunderstood privacy tools, but they still have some good uses.
