--- a/content/post/2022-06-25-privacy.md
+++ b/content/post/2022-06-25-privacy.md
@@ -59,8 +59,9 @@ Mullvad VPN is unique in that instead of making you create an account with an em
 They also allow for more secure payment methods such as cryptocurrency and even sending cash through the mail.
 
 # Email
-For similar reasons to the search engine section, Gmail is bad for privacy.
-If you need to send secure emails, [Disroot](https://disroot.org/) or [Mailbox.org](https://mailbox.org/) both seem to be good contenders (although I haven't personally used either of them).
+For similar reasons to the search engine section, Gmail and most free email services are bad for privacy.
+For one-time-use email addresses, [Tempmail](https://temp-mail.org/en/) is a good service to use.
+If you need to a consistent and secure email service, [Disroot](https://disroot.org/) or [Mailbox.org](https://mailbox.org/) both seem to be good contenders (although I haven't personally used either of them).
 ProtonMail is another common choice, by I would lean against using them because they were found to have been logging the IP address of a French activist in 2021 due to orders from the Swiss government.
 
 # Passwords
